Partial work on live transcode

--- a/VueServer/appsettings.json
+++ b/VueServer/appsettings.json
@@ -14,6 +14,7 @@
         "Https": true,
         "Port": 5000,
         "DatabaseType": 1,
+        "LiveTranscode": 0,
         "Well-Known": false
     },
     "Jwt": {
