--- a/VueServer/package.json
+++ b/VueServer/package.json
@@ -7,7 +7,8 @@
   "repository": "",
   "scripts": {
     "dev": "cross-env ASPNETCORE_ENVIRONMENT=Development NODE_ENV=development dotnet run",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "watch": "webpack --watch"
   },
   "devDependencies": {
     "@babel/core": "7.7.7",
@@ -59,7 +60,6 @@
     "vue-router": "3.1.3",
     "vue-server-renderer": "2.6.11",
     "vue-template-compiler": "2.6.11",
-    "vue2-datepicker": "3.3.0",
     "vue2-editor": "2.10.2",
     "vuetify": "2.1.15",
     "vuex": "3.1.2",
