--- a/VueServer/package.json
+++ b/VueServer/package.json
@@ -55,6 +55,7 @@
     "html-webpack-plugin": "3.2.0",
     "material-design-icons-iconfont": "5.0.1",
     "save-dev": "0.0.1-security",
+    "tiptap": "^1.27.0",
     "vue": "2.6.11",
     "vue-cookie": "1.1.4",
     "vue-moment-lib": "^1.2.2",
