--- a/Domain/VueServer.Domain.csproj
+++ b/Domain/VueServer.Domain.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>VueServer.Domain</RootNamespace>
+    <RootNamespace>VueServer</RootNamespace>
     <!--<RuntimeFrameworkVersion>2.2.0</RuntimeFrameworkVersion>-->
     <!--<AspNetCoreModuleName>AspNetCoreModuleNameV2</AspNetCoreModuleName>
     <AspNetCoreHostingModel>inprocess</AspNetCoreHostingModel>-->
