--- a/Services/VueServer.Services.csproj
+++ b/Services/VueServer.Services.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>VueServer.Services</RootNamespace>
+    <RootNamespace>VueServer</RootNamespace>
     <!--<RuntimeFrameworkVersion>2.2.0</RuntimeFrameworkVersion>-->
     <!--<AspNetCoreModuleName>AspNetCoreModuleNameV2</AspNetCoreModuleName>
     <AspNetCoreHostingModel>inprocess</AspNetCoreHostingModel>-->
@@ -16,7 +16,7 @@
     
   <ItemGroup>
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
-    <PackageReference Include="Xabe.FFMpeg" Version="3.5.1" />
+    <PackageReference Include="Xabe.FFMpeg" Version="4.0.0" />
   </ItemGroup>
 
   <ItemGroup>
