--- a/VueServer/package.json
+++ b/VueServer/package.json
@@ -12,58 +12,58 @@
     "watch": "webpack --watch"
   },
   "devDependencies": {
-    "@babel/core": "7.7.7",
-    "@babel/plugin-syntax-object-rest-spread": "7.7.4",
-    "@babel/plugin-transform-async-to-generator": "7.7.4",
-    "@babel/plugin-transform-runtime": "7.7.6",
-    "@babel/polyfill": "7.7.0",
-    "@babel/preset-env": "7.7.7",
-    "@babel/preset-stage-2": "7.0.0",
-    "@babel/register": "7.7.7",
-    "@babel/runtime": "7.7.7",
+    "@babel/core": "7.9.6",
+    "@babel/plugin-syntax-object-rest-spread": "7.8.3",
+    "@babel/plugin-transform-async-to-generator": "7.8.3",
+    "@babel/plugin-transform-runtime": "7.9.6",
+    "@babel/polyfill": "7.8.7",
+    "@babel/preset-env": "7.9.6",
+    "@babel/preset-stage-2": "7.8.3",
+    "@babel/register": "7.9.0",
+    "@babel/runtime": "7.9.6",
     "aspnet-webpack": "3.0.0",
-    "babel-loader": "8.0.6",
-    "cross-env": "6.0.3",
-    "css-loader": "3.4.0",
+    "babel-loader": "8.1.0",
+    "cross-env": "7.0.2",
+    "css-loader": "3.5.3",
     "deepmerge": "^4.2.2",
-    "event-source-polyfill": "1.0.11",
+    "event-source-polyfill": "1.0.12",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "fibers": "4.0.2",
-    "file-loader": "5.0.2",
+    "fibers": "5.0.0",
+    "file-loader": "6.0.0",
     "mini-css-extract-plugin": "0.9.0",
-    "node-sass": "4.13.0",
+    "node-sass": "4.14.1",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "postcss-loader": "3.0.0",
-    "sass": "1.24.0",
-    "sass-loader": "8.0.0",
-    "style-loader": "1.1.1",
-    "url-loader": "3.0.0",
-    "vue-loader": "15.8.3",
-    "vuetify-loader": "^1.4.3",
-    "webpack": "4.41.4",
-    "webpack-cli": "^3.3.10",
+    "sass": "1.26.5",
+    "sass-loader": "8.0.2",
+    "style-loader": "1.2.1",
+    "url-loader": "4.1.0",
+    "vue-loader": "15.9.2",
+    "vuetify-loader": "1.4.3",
+    "webpack": "4.43.0",
+    "webpack-cli": "3.3.11",
     "webpack-dev-middleware": "3.7.2",
     "webpack-hot-middleware": "2.25.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome": "1.2.0-6",
-    "@fortawesome/fontawesome-svg-core": "1.2.26",
-    "@fortawesome/free-solid-svg-icons": "5.12.0",
+    "@fortawesome/fontawesome-svg-core": "1.2.28",
+    "@fortawesome/free-solid-svg-icons": "5.13.0",
     "@fortawesome/vue-fontawesome": "0.1.9",
-    "axios": "0.19.0",
-    "core-js": "3.6.0",
-    "html-webpack-plugin": "3.2.0",
+    "axios": "0.19.2",
+    "core-js": "3.6.5",
+    "html-webpack-plugin": "4.3.0",
     "material-design-icons-iconfont": "5.0.1",
     "save-dev": "0.0.1-security",
     "vue": "2.6.11",
     "vue-cookie": "1.1.4",
-    "vue-moment-lib": "^1.2.2",
-    "vue-router": "3.1.3",
+    "vue-moment-lib": "1.2.2",
+    "vue-router": "3.1.6",
     "vue-server-renderer": "2.6.11",
     "vue-template-compiler": "2.6.11",
     "vue2-editor": "2.10.2",
-    "vuetify": "2.1.15",
-    "vuex": "3.1.2",
+    "vuetify": "2.2.27",
+    "vuex": "3.3.0",
     "vuex-router-sync": "5.0.0"
   }
 }
