--- a/VueServer/package.json
+++ b/VueServer/package.json
@@ -12,6 +12,7 @@
     "watch": "webpack --watch"
   },
   "devDependencies": {
+    "@aspnet/signalr": "1.1.4",
     "@babel/core": "7.9.6",
     "@babel/plugin-syntax-object-rest-spread": "7.8.3",
     "@babel/plugin-transform-async-to-generator": "7.8.3",
