Moved chat system over to Vuex store
Fixed bug with time not updating every second as it should.
Fixed bug with Directory system not getting the user name correctly to
check whether user has access to certain features.

--- a/VueServer/package.json
+++ b/VueServer/package.json
@@ -7,7 +7,7 @@
   "repository": "",
   "scripts": {
     "dev": "cross-env ASPNETCORE_ENVIRONMENT=Development NODE_ENV=development dotnet run",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "build": "node node_modules/webpack/bin/webpack.js --env.dev",
     "publish": "node node_modules/webpack/bin/webpack.js --env.prod",
     "watch": "webpack --watch"
   },
