Profile picture upload
Profile page on front-end now exists
Can now upload profile pictures
Mime type helper added different types so we can see whether the file is
Audio, Video, Text, etc from the mime type of the file

Work to do: Need to get those profile picture values to show in the chat
conversation section

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ bld/
 # Webserver fileserver folders
 */wwwroot/.well-known/**
 */wwwroot/tmp/**
+*/wwwroot/public/**
 
 # Webpack build results
 */wwwroot/dist/**
