--- a/Models/VueServer.Models.csproj
+++ b/Models/VueServer.Models.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>VueServer</RootNamespace>
     <!--<RootNamespace>VueServer.Models</RootNamespace>-->
     <!--<RuntimeFrameworkVersion>2.2.0</RuntimeFrameworkVersion>-->
