--- a/VueServer/VueServer.csproj
+++ b/VueServer/VueServer.csproj
@@ -1,15 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>VueServer</RootNamespace>
-    <RuntimeIdentifier>win10-x64</RuntimeIdentifier>
     <StartupObject>VueServer.Program</StartupObject>
     <!--<RuntimeFrameworkVersion>3.1.0</RuntimeFrameworkVersion>-->
-    <AspNetCoreModuleName>AspNetCoreModuleV2</AspNetCoreModuleName>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <!--<AspNetCoreModuleName>AspNetCoreModuleV2</AspNetCoreModuleName>-->
   </PropertyGroup>
   
   <ItemGroup>
