--- a/src/Client/vue-server-ui/package.json
+++ b/src/Client/vue-server-ui/package.json
@@ -34,6 +34,7 @@
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "~10.1.0",
     "babel-loader": "~8.2.2",
+    "dotenv-webpack": "^6.0.4",
     "eslint": "~6.7.2",
     "eslint-plugin-vue": "~6.2.2",
     "sass": "^1.32.8",
