Caching of User Module/Features
Added a new assembly for "core" functionality that doesn't fit into the
domain project because of dependencies

--- a/src/Server/Controllers/VueServer.Controllers.csproj
+++ b/src/Server/Controllers/VueServer.Controllers.csproj
@@ -13,8 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-	  <ProjectReference Include="..\Domain\VueServer.Domain.csproj" />
-	  <ProjectReference Include="..\Models\VueServer.Models.csproj" />
+    <ProjectReference Include="..\Core\VueServer.Core.csproj" />
     <ProjectReference Include="..\Services\VueServer.Services.csproj" />
   </ItemGroup>
   
