--- a/src/Server/Services/VueServer.Services.csproj
+++ b/src/Server/Services/VueServer.Services.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>VueServer.Services</RootNamespace>
+    <RootNamespace>VueServer</RootNamespace>
     <!--<RuntimeFrameworkVersion>2.2.0</RuntimeFrameworkVersion>-->
     <!--<AspNetCoreModuleName>AspNetCoreModuleNameV2</AspNetCoreModuleName>
     <AspNetCoreHostingModel>inprocess</AspNetCoreHostingModel>-->
@@ -18,10 +18,9 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
     <PackageReference Include="Xabe.FFMpeg" Version="3.5.1" />
   </ItemGroup>
-
+    
   <ItemGroup>
-    <ProjectReference Include="..\Domain\VueServer.Domain.csproj" />
-    <ProjectReference Include="..\Models\VueServer.Models.csproj" />
+    <ProjectReference Include="..\Core\VueServer.Core.csproj" />
   </ItemGroup>
   
 </Project>
