--- a/src/Server/VueServer.Modules.Chat/VueServer.Modules.Chat.csproj
+++ b/src/Server/VueServer.Modules.Chat/VueServer.Modules.Chat.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.NewtonsoftJson" Version="5.0.14" />
   </ItemGroup>
 
   <ItemGroup>
