Add user vuex module
Fixed some issues with directory not working properly because it was
named as browser and the server module is directory

--- a/src/Client/vue-server-ui/.prettierrc
+++ b/src/Client/vue-server-ui/.prettierrc
@@ -1,6 +1,8 @@
 {
+  "bracketSameLine": false,
   "trailingComma": "es5",
   "tabWidth": 2,
   "semi": false,
   "singleQuote": true
+  "printWidth": 120,
 }
