Clean up server project naming

--- a/src/Server/VueServer.Main/VueServer.Main.csproj
+++ b/src/Server/VueServer.Main/VueServer.Main.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>VueServer</RootNamespace>
     <StartupObject>VueServer.Program</StartupObject>
+    <AssemblyName>VueServer</AssemblyName>
   </PropertyGroup>
   
   <ItemGroup>
