--- a/src/Server/VueServer.Modules.Core/VueServer.Modules.Core.csproj
+++ b/src/Server/VueServer.Modules.Core/VueServer.Modules.Core.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Core\VueServer.Core.csproj" />
+    <ProjectReference Include="..\VueServer.Core\VueServer.Core.csproj" />
   </ItemGroup>
 
 </Project>
