--- a/src/Server/VueServer.Core/VueServer.Core.csproj
+++ b/src/Server/VueServer.Core/VueServer.Core.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Domain\VueServer.Domain.csproj" />
+    <ProjectReference Include="..\VueServer.Domain\VueServer.Domain.csproj" />
   </ItemGroup>
 
 </Project>
