--- a/src/Server/VueServer.Test.Unit/VueServer.Test.Unit.csproj
+++ b/src/Server/VueServer.Test.Unit/VueServer.Test.Unit.csproj
@@ -7,10 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="5.0.14" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="Moq" Version="4.13.1" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
       <PrivateAssets>all</PrivateAssets>
@@ -23,7 +21,7 @@
     <ProjectReference Include="..\VueServer.Modules.Directory\VueServer.Modules.Directory.csproj" />
     <ProjectReference Include="..\VueServer.Modules.Library\VueServer.Modules.Library.csproj" />
     <ProjectReference Include="..\VueServer.Modules.Weight\VueServer.Modules.Weight.csproj" />
-    <ProjectReference Include="..\VueServer\VueServer.csproj" />
+    <ProjectReference Include="..\VueServer.Main\VueServer.Main.csproj" />
   </ItemGroup>
 
 </Project>
